Complete authorization swagger and client example
