# src/main/java/es/enolgor/app/api/auth/Secured.java
@@ -17,5 +17,10 @@ public class Secured {
 	@NameBinding
 	@Retention(RetentionPolicy.RUNTIME)
 	@Target({ElementType.TYPE, ElementType.METHOD})
-	public @interface Bearer { }
+	public @interface Access { }
+	
+	@NameBinding
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target({ElementType.TYPE, ElementType.METHOD})
+	public @interface Refresh { }
 }
